compiler/src/test/resources/golden/errors/java_class_not_found.dawn
use java "com.example.DoesNotExist"

pub fn main() -> Unit !io = println("hi")
