compiler/src/test/resources/golden/errors/java_class_not_found.err
error: Java class not found: com.example.DoesNotExist
  --> java_class_not_found.dawn:1:10
  |
1 | use java "com.example.DoesNotExist"
  |          ^^^^^^^^^^^^^^^^^^^^^^^^^^
  = hint: v0.1 resolves against the JDK; third-party jars are not on the compile classpath
